--- a/src/App.css
+++ b/src/App.css
@@ -16,9 +16,11 @@
   margin-left: auto;
   display: flex;
   justify-content: space-between;
+  
 }
 .menu_a a{
   margin-left: 50px;
+  text-decoration: none;
 }
 
 
@@ -58,6 +60,10 @@ input {
 .contato{
   height: 100px;
   display: flex;
- align-items: center;
+  align-items: center;
   
+  
+}
+.contato a {
+  text-decoration: none;
 }
